<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.inacap.unidad1.activity.Fragment_Cliente$PlaceholderFragment" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/Txt_msj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/Bienvenido"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#6F172C"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView1"
        android:background="#1ED142"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:text="@string/Salir"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:text="@string/longitud" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TxtEstado"
        android:layout_alignBottom="@+id/TxtEstado"
        android:layout_alignLeft="@+id/Txt_direccion"
        android:text="@string/estado" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Txt_latitud"
        android:layout_alignBottom="@+id/Txt_latitud"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/latitud" />

    <TextView
        android:id="@+id/Txt_longitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/Txt_msj"
        android:text="longitud2" />

    <TextView
        android:id="@+id/Txt_latitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Txt_longitud"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/Txt_longitud"
        android:layout_marginTop="17dp"
        android:text="latitud" />

    <TextView
        android:id="@+id/Txt_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_salir"
        android:layout_alignRight="@+id/btn_salir"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="16dp"
        android:text="@string/Direccion" />

    <TextView
        android:id="@+id/TxtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Txt_latitud"
        android:layout_alignRight="@+id/Txt_direccion"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="17dp"
        android:text="@string/estado" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView04"
        android:layout_marginTop="18dp"
        android:text="@string/precision" />

    <TextView
        android:id="@+id/Txt_precision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TxtEstado"
        android:layout_alignLeft="@+id/TxtEstado"
        android:layout_alignRight="@+id/TxtEstado"
        android:text="precision" />

</RelativeLayout>